--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tempfile = "3.19.1"
 zip = "2.4.2"
+russh = "0.52.0"
+tokio = "1.44.2"
+russh-sftp = "2.1.1"
+dotenvy = "0.15.7"
